# SWiface

./: ._XXVII Campeonato Regional de Castilla-La Mancha 2015  ._silentwings-studio  .gitignore  DBcreate.py  DBschema.sql  DBschema.sqlite3  DBupdrec.sql  INSTALL  INSTALL.md  INSTALL.txt  README  README.md  SW.alive  SWIFACE.sql  SWS.alive  SWS.reqs  SWcalsunrisesunset.py  SWiface.py  SWsynckglid.sh  Vagrantfile  Vagrantfile.example  aliases  commoninstall.sh  composer.json  config.php  config.py  config.template  crontab.data  data  flarmfuncs.py  gencuc.py  html  html.dir  install.sh  kglid.bkup  kglid.py  ksta.py  libfap.py  lt24funcs.py  ogn.pull.php  (+10 more)
.github/: copilot-instructions.md
SEB-SW-studio/: ._README  ._auth.inc.php  ._getprotocolinfo.php  ._index.php  ._sql.php  README  getactivecontests.php  getprotocolinfo.php
config/: deploy.rb
dockerfiles/: DBschema.sql  Dockerfile  Makefile  Mariadb.dockerfile  Mariadb.patch  README  README.md  SWidaily.docker.sh  SWifaily.docker.sh  Vagrantfile  alias  config.template  create.SWIFACE.db.sh  install.MariaDB.sh  install.docker  install.portainer  install.setup  install.sh  mariadb.samples  mariadb.sh  mariadb.start  mariadb.swiface.sh  mariadbpma.sh  start.ssh.swiface.sh  swiface.create.sh  swiface.sh  swiface.standalone.sh  swiface.start.sh  sws.sh
provisioning/: ADDUSER.sh  CRONTAB.sh  GLIDERS.sh  OGNDB.sh  README  SWIFACE.sh  Vagrantfile  basicpak.yml  bootstrap.sh  cloneSAR.sh  docker.yml  fail2ban.yml  init.sh  install.sh  lamp.yml  main.yml  setup.yml
sh/: .gitignore  SWScheck.sh  SWSync.old  SWbkup.sh  SWhealth.sh  SWidaily.sh  SWkillandgo.sh  SWlive.sh  SWlive2.sh  SWmonthlylog.sh  SWpihealth.sh  SWppa-remove.sh  SWqbr.sh  SWsync.sh  SWsyncDB.sh  SWtest.sh  SWtestnoip.sh  SWweekly.sh  SWyearly.sh  bkup.sh  bkupimage.sh  buildimage.sh  calcelestial.sh  checkogn.sh  crontab.data  health.sh  live.sh  mailcatcher.install  (+10 more)
sh/calcelestial/: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.ac
sh/calcelestial/doc/: calcelestial.1
sh/calcelestial/src/: Makefile.am  Makefile.in  calcelestial  calcelestial.c  formatter.c  formatter.h  geonames.c  geonames.h  geonames_main.c  helpers.c  helpers.h  objects.c  objects.h
(+33 files in other folders)
